VSE: Select Side of Frame Includes Ended Strip on Other Side #80397

Closed
opened 2020-09-02 21:39:36 +02:00 by Henry Gernhardt · 4 comments

System Information
Operating system: Ubuntu Studio 18.04.1, Linux 5.4.0-42-lowlatency kernel, 64-bit
Graphics card: NVidia 1050TI

Blender Version
Broken: 2.90.0
Worked: 2.83 LTS

Short description of error
When one strip ends and another begins at the currently positioned frame in the timeline, using bpy.ops.sequencer.select_side_of_frame() (either side='LEFT' or side='right') results in both strips being selected. In 2.83 LTS only strips on the requested side were selected.

Exact steps for others to reproduce the error
Put two strips into the VSE. Snap the playhead to the end of one. Select the other and snap it to the current frame. Deselect all, then select side of frame (either left or right). Both strips will be selected. See attached screencap for demonstration.

2020-09-02 15-30-13.mp4

**System Information** Operating system: Ubuntu Studio 18.04.1, Linux 5.4.0-42-lowlatency kernel, 64-bit Graphics card: NVidia 1050TI **Blender Version** Broken: 2.90.0 Worked: 2.83 LTS **Short description of error** When one strip ends and another begins at the currently positioned frame in the timeline, using `bpy.ops.sequencer.select_side_of_frame()` (either `side='LEFT'` or `side='right'`) results in both strips being selected. In 2.83 LTS only strips on the requested side were selected. **Exact steps for others to reproduce the error** Put two strips into the VSE. Snap the playhead to the end of one. Select the other and snap it to the current frame. Deselect all, then select side of frame (either left or right). Both strips will be selected. See attached screencap for demonstration. [2020-09-02 15-30-13.mp4](https://archive.blender.org/developer/F8833890/2020-09-02_15-30-13.mp4)

Added subscriber: @hcgernhardtiii

Added subscriber: @hcgernhardtiii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by c514357358

This issue was referenced by c5143573585c9dd3af541024540f77295cf0babf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-10-05 03:19:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80397
No description provided.