Fix T80397: Select Side not working correctly

Test for side on which strip is was incorrect.